--- a/src/front/CSW_T2012E/view/index.html
+++ b/src/front/CSW_T2012E/view/index.html
@@ -18,11 +18,12 @@
         <table class="table table-dark">
             <thead>
             <tr>
-                <th scope="col">#</th>
+                <th scope="col">Stt</th>
+                <th scope="col">Code</th>
                 <th scope="col">Name</th>
                 <th scope="col">Price</th>
                 <th scope="col">Quantity</th>
-                <th scope="col">Add quantity</th>
+                <th scope="col">Sell</th>
                 <th scope="col">Action</th>
             </tr>
             </thead>
@@ -36,19 +37,40 @@
 <script>
     document.addEventListener("DOMContentLoaded",function (){
         axios.get('http://localhost:4953/api/v1/products').then(res => {
-            var data = res.data;
-            for (let i = 0; i < data.length ; i++) {
-                $('#body_tb').append(`<tr>
-                <th scope="row">${data[i].id}</th>
+            var data = res.data.reverse();
+            if (data.length > 0)
+                for (let i = 0; i < data.length ; i++) {
+                    $('#body_tb').append(`<tr>
+                <th scope="row">${i+1}</th>
+                <th># - ${data[i].id}</th>
                 <td>${data[i].name}</td>
                 <td>${data[i].price}</td>
                 <td>${data[i].quantity}</td>
-                <td><input type="number"></td>
+                <td><input id="quantity-of-${data[i].id}" type="number" value="0"></td>
                 <td>
-                    <a href="" class="btn btn-warning">Add quantity</a>
+                    <button slot="${data[i].id}" class="btn btn-warning btn-sell">Sell</button>
                 </td>
             </tr>`)
+                }
+        })
+
+        $('body').click(function (e){
+            const body = this
+            const ele = e.target
+            if($(ele).hasClass('btn-sell')){
+                const id = ele.slot
+                const quantity = body.querySelector(`#quantity-of-${id}`).value;
+                if (quantity != 0) {
+                    axios.post(`http://localhost:4953/api/v1/products/sell?id=${id}&quantity=${quantity}`).then(result => {
+                        if (result.status === 200){
+                            window.location.reload()
+                        }
+                        else
+                            alert("đã sảy lỗi vui lòng thử lại sau")
+                    })
+                }
             }
+
         })
     })
 </script>
